--- a/Cocoon/Resources/Website.ar.resx
+++ b/Cocoon/Resources/Website.ar.resx
@@ -214,7 +214,7 @@
     <value>اعاده ارسال الكود</value>
   </data>
   <data name="SAR" xml:space="preserve">
-    <value>ريال سعودي</value>
+    <value>ريال</value>
   </data>
   <data name="Save" xml:space="preserve">
     <value>حفظ</value>
